--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.1.10",
     "@prismicio/client": "^7.1.1",
     "@prismicio/next": "^1.3.4",
     "@prismicio/react": "^2.7.1",
@@ -20,8 +21,10 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "framer-motion": "^10.16.2",
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
