--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@nextui-org/react": "^2.1.10",
     "@prismicio/client": "^7.1.1",
     "@prismicio/next": "^1.3.4",
