--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@storybook/nextjs": "7.3.2",
     "@storybook/react": "7.3.2",
     "@storybook/testing-library": "0.2.0",
+    "daisyui": "^3.7.3",
     "eslint-plugin-storybook": "^0.6.13",
     "slice-machine-ui": "^1.12.0",
     "storybook": "7.3.2"
