--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-dom": "18.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@slicemachine/adapter-next": "^0.3.14",
