--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hcaptcha/react-hcaptcha": "^1.8.1",
     "@nextui-org/react": "^2.1.10",
     "@prismicio/client": "^7.1.1",
     "@prismicio/next": "^1.3.4",
