--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "embla-carousel-react": "8.0.0-rc14",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "formik": "^2.4.4",
@@ -36,7 +37,6 @@
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swiper": "^10.3.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
