bug: Add access token

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_URL_PRODUCTION='https://heropixel.co.za'
 NEXT_PUBLIC_URL_DEVELOPMENT='http://192.168.0.23:3000'
 NEXT_PUBLIC_CONTACT_FORM_API='dde21eb7-de00-49ba-808b-9d0271035740'
+PRISMIC_ACCESS_TOKEN="MC5aUk5qTGhBQUFCNEFNQU1h.77-9FQl8Rnzvv70x77-9V--_ve-_ve-_ve-_vTVEY2zvv73vv73vv70aRu-_vSJ7ZO-_vUVBAe-_vQ"
